--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    
+    <main class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary justify-content-center">
+              <h1 class="text-center">Navbar</h1>
+            </div>
+          </nav>
+    </main>
 </body>
 </html>
