--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <main class="container-fluid">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary justify-content-center">
-              <h1 class="text-center">Navbar</h1>
+        <nav class="navbar navbar-expand-lg justify-content-center bg-dark text-light">
+              <h1 class="text-center">Weather Dashboard</h1>
             </div>
           </nav>
     </main>
