--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <nav class="navbar navbar-expand-lg justify-content-center bg-dark text-light">
               <h1 class="text-center">Weather Dashboard</h1>
             </div>
-          </nav>
+        </nav>
+        <section class="row">
+            <aside class="col-12 col-md-3"></aside>
+            <article class="col-12 col-md-9"></article>
+        </section>
     </main>
 </body>
 </html>
