--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <article class="col-12 col-md-9">
                 <div class="row">
                     <div class="col-12">
-                        <div class="card">
+                        <div class="card m-3">
                             <div class="card-body">
                               This is some text within a card body.
                             </div>
