--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <article class="col-12 col-md-9">
                 <div class="row">
                     <div class="col-12">
-                        <div class="card m-3">
+                        <div class="card m-3 p-3">
                             <div class="card-body">
-                              This is some text within a card body.
+                                <h4 class="card-title">Charlotte</h4>
+                              <p>This is some text within a card body.</p>
                             </div>
                           </div>
                     </div>
