--- a/index.html
+++ b/index.html
@@ -21,6 +21,70 @@
                             <div class="card-body">
                                 <h4 class="card-title">Charlotte</h4>
                               <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12 col-xl">
+                        <div class="card m-3 p-3">
+                            <div class="card-body">
+                                <h4 class="card-title">Charlotte</h4>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12 col-xl">
+                        <div class="card m-3 p-3">
+                            <div class="card-body">
+                                <h4 class="card-title">Charlotte</h4>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12 col-xl">
+                        <div class="card m-3 p-3">
+                            <div class="card-body">
+                                <h4 class="card-title">Charlotte</h4>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12 col-xl">
+                        <div class="card m-3 p-3">
+                            <div class="card-body">
+                                <h4 class="card-title">Charlotte</h4>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-12 col-xl">
+                        <div class="card m-3 p-3">
+                            <div class="card-body">
+                                <h4 class="card-title">Charlotte</h4>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
+                              <p>This is some text within a card body.</p>
                             </div>
                           </div>
                     </div>
