--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
             </div>
         </nav>
         <section class="row">
-            <aside class="col-12 col-md-3"></aside>
+            <aside class="col-12 col-md-3">
+                <div class="m-3">
+                    <form>
+                        <h3>Search For A City:</h3>
+                        <input class="form-control form-control-lg" type="text" placeholder="Search:" aria-label=".form-control-lg example">
+                        <button class="btn btn-primary mt-3 w-100">Search</button>
+                    </form>
+                </div>
+            </aside>
             <article class="col-12 col-md-9">
                 <div class="row">
                     <div class="col-12">
