--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                         <input class="form-control form-control-lg" type="text" placeholder="Search:" aria-label=".form-control-lg example">
                         <button class="btn btn-primary mt-3 w-100">Search</button>
                         <hr>
+                        <div id="cities">
+                            <button class="btn btn-secondary mb-3 w-100">Search</button>
+                            <button class="btn btn-secondary mb-3 w-100">Search</button>
+                            <button class="btn btn-secondary mb-3 w-100">Search</button>
+                            <button class="btn btn-secondary mb-3 w-100">Search</button>
+                        </div>
                     </form>
                 </div>
             </aside>
