--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <form>
                         <h3>Search For A City:</h3>
                         <input class="form-control form-control-lg" type="text" placeholder="Search:" aria-label=".form-control-lg example">
-                        <button class="btn btn-primary mt-3 w-100">Search</button>
+                        <button class="btn btn-lg btn-primary mt-3 w-100">Search</button>
                         <hr>
                         <div id="cities">
-                            <button class="btn btn-secondary mb-3 w-100">Search</button>
-                            <button class="btn btn-secondary mb-3 w-100">Search</button>
-                            <button class="btn btn-secondary mb-3 w-100">Search</button>
-                            <button class="btn btn-secondary mb-3 w-100">Search</button>
+                            <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
+                            <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
+                            <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
+                            <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
                         </div>
                     </form>
                 </div>
