gave form id, input id, button type, and moved div-cities outside of form

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <section class="row">
             <aside class="col-12 col-md-3">
                 <div class="m-3">
-                    <form>
+                    <form id="city-search">
                         <h3>Search For A City:</h3>
-                        <input class="form-control form-control-lg" type="text" placeholder="Search:" aria-label=".form-control-lg example">
-                        <button class="btn btn-lg btn-primary mt-3 w-100">Search</button>
+                        <input  id="q" name="q" class="form-control form-control-lg" type="text" placeholder="Search">
+                        <button type="submit" class="btn btn-lg btn-primary mt-3 w-100">Search</button>
                         <hr>
-                        <div id="cities">
-                            <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
-                            <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
-                            <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
-                            <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
-                        </div>
                     </form>
+                    <div id="cities">
+                        <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
+                        <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
+                        <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
+                        <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
+                    </div>
                 </div>
             </aside>
             <article class="col-12 col-md-9">
