--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="card m-3 p-3">
-                            <div class="card-body">
+                            <div class="card-body" id="current-weather">
                                 <h4 class="card-title">Charlotte</h4>
                               <p>This is some text within a card body.</p>
                               <p>This is some text within a card body.</p>
