updated functions and included event listener for submit button and added weather icons

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                         <hr>
                     </form>
                     <div id="cities">
-                        <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
-                        <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
-                        <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
-                        <button class="btn btn-lg btn-secondary mb-3 w-100">Search</button>
+                        <button class="btn btn-lg btn-secondary mb-3 w-100">Charlotte</button>
+                        <button class="btn btn-lg btn-secondary mb-3 w-100">Asheville</button>
+                        <button class="btn btn-lg btn-secondary mb-3 w-100">Boone</button>
+                        <button class="btn btn-lg btn-secondary mb-3 w-100">Winston-Salem</button>
                     </div>
                 </div>
             </aside>
