updated html, and generated README file

--- a/index.html
+++ b/index.html
@@ -35,12 +35,7 @@
                     <div class="col-12">
                         <div class="card m-3 p-3">
                             <div class="card-body" id="current-weather">
-                                <h4 class="card-title">Charlotte</h4>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
+                                <h4 class="card-title">Welcome to the Weather Dashboard, please search for a city to view weather conditions</h4>
                             </div>
                           </div>
                     </div>
@@ -49,60 +44,35 @@
                     <div class="col-12 col-xl">
                         <div class="card m-3 p-3">
                             <div class="card-body">
-                                <h4 class="card-title">Charlotte</h4>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
+                                <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
                     <div class="col-12 col-xl">
                         <div class="card m-3 p-3">
                             <div class="card-body">
-                                <h4 class="card-title">Charlotte</h4>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
+                                <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
                     <div class="col-12 col-xl">
                         <div class="card m-3 p-3">
                             <div class="card-body">
-                                <h4 class="card-title">Charlotte</h4>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
+                                <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
                     <div class="col-12 col-xl">
                         <div class="card m-3 p-3">
                             <div class="card-body">
-                                <h4 class="card-title">Charlotte</h4>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
+                                <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
                     <div class="col-12 col-xl">
                         <div class="card m-3 p-3">
                             <div class="card-body">
-                                <h4 class="card-title">Charlotte</h4>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
-                              <p>This is some text within a card body.</p>
+                                <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
