--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script defer src="./assets/js/script.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <main class="container-fluid">
@@ -33,44 +34,44 @@
             <article class="col-12 col-md-9">
                 <div class="row">
                     <div class="col-12">
-                        <div class="card m-3 p-3">
-                            <div class="card-body" id="current-weather">
-                                <h4 class="card-title">Welcome to the Weather Dashboard, please search for a city to view weather conditions</h4>
+                        <div class="card m-3 p-3 d-none" id="current-weather">
+                            <div class="card-body">
+                                <h4 class="card-title"></h4>
                             </div>
-                          </div>
+                        </div>
                     </div>
                 </div>
                     <div class="row" id="five-day">
                     <div class="col-12 col-xl">
-                        <div class="card m-3 p-3">
+                        <div class="card m-3 p-3 d-none">
                             <div class="card-body">
                                 <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
                     <div class="col-12 col-xl">
-                        <div class="card m-3 p-3">
+                        <div class="card m-3 p-3 d-none">
                             <div class="card-body">
                                 <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
                     <div class="col-12 col-xl">
-                        <div class="card m-3 p-3">
+                        <div class="card m-3 p-3 d-none">
                             <div class="card-body">
                                 <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
                     <div class="col-12 col-xl">
-                        <div class="card m-3 p-3">
+                        <div class="card m-3 p-3 d-none">
                             <div class="card-body">
                                 <h4 class="card-title"></h4>
                             </div>
                           </div>
                     </div>
                     <div class="col-12 col-xl">
-                        <div class="card m-3 p-3">
+                        <div class="card m-3 p-3 d-none">
                             <div class="card-body">
                                 <h4 class="card-title"></h4>
                             </div>
